Added some examples in README

--- a/README.rdoc
+++ b/README.rdoc
@@ -31,3 +31,17 @@ Get single campaign
 
   gr_connection.get_campaign(bad_id)
   => nil
+
+Get messages in account:
+
+  # get messages assigned to campaign with "N3i" ID
+  gr_connection.get_messages(:campaigns => ["N3i"])
+
+  # get messages with newsletter type
+  gr_connection.get_messages(:type => "newsletter")
+
+  # get messages from from campaigns with name like "my_biz"
+  gr_connection.get_messages(:get_campaigns => { :name.contain => "%my_biz%" })
+
+  # get one messages identifier by <tt>id</tt>
+  gr_connection.get_message("some_id")
