Fetch all domains connected with account. Closes #8

--- a/README.rdoc
+++ b/README.rdoc
@@ -88,3 +88,9 @@ Add account from field
   # account = existing account
   account.from_fields.create("name" => "My new name", "email" => "my_new_email@foo.bar")
   => #<GetResponse::FromField:0xb7727010 ... >
+
+Get account domains
+
+  # with account
+  # account - existing account
+  account.domains.all
