Introduce Newsletter & FollowUp classes. destroy method

--- a/README.rdoc
+++ b/README.rdoc
@@ -124,3 +124,8 @@ Get stats of message
 
   # message - existing message
   message.stats
+
+Delete message
+
+  # message - existing message
+  message.destroy
