Fetching account blacklist. Introduce Blacklist class. Closes #29

--- a/README.rdoc
+++ b/README.rdoc
@@ -193,3 +193,7 @@ Fetching links embedded in messages
 
   connection.links.all
   message.links
+
+Fetching blacklisted addresses for account
+
+  account.blacklist
