--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,10 @@ Be sure to check changes before update.
 
 == Usage
 
+Just add to you Gemfile
+
+  gem "getresponse", :require => "get_response"
+
 Test connection to GetResponse API.
 
   gr_connection = GetResponse::Connection.new("my_secret_api")
